Add more bookmarks

--- a/utils/bookmarks.yaml
+++ b/utils/bookmarks.yaml
@@ -11,4 +11,45 @@ bookmarks:
   -
     title: Amazon
     url: https://amazon.com
-  
+  -
+    title: Wealthfront
+    url: https://wealthfront.com
+  -
+    title: American Express (amex)
+    url: https://americanexpress.com
+  -
+    title: Google Flights
+    url: https://google.com/flights
+  -
+    title: Deno Fresh
+    url: https://fresh.deno.dev
+  -
+    title: Supabase
+    url: https://supabase.com
+  -
+    title: Huckberry
+    url: https://huckberry.com
+  -
+    title: Taylor Stitch
+    url: https://taylorstitch.com
+  -
+    title: Tailwind Docs
+    url: https://tailwindcss.com/docs/
+  -
+    title: Deno Deploy
+    url: https://dash.deno.com
+  -
+    title: The Essential
+    url: https://theessential.com
+  -
+    title: Ebay
+    url: https://ebay
+  -
+    title: Hodinkee
+    url: https://hodinkee.com
+  -
+    title: Hodinkee Shop
+    url: https://shop.hodinkee.com/
+  -
+    title: Basecamp
+    url: https://basecamp.com/
