--- a/utils/bookmarks.yaml
+++ b/utils/bookmarks.yaml
@@ -4,7 +4,7 @@ bookmarks:
     url: https://theverge.com
   - 
     title: Hacker News
-    url: https://news.ycobinator
+    url: https://news.ycobinator.com
   -
     title: Youtube
     url: https://youtube.com
@@ -43,7 +43,7 @@ bookmarks:
     url: https://theessential.com
   -
     title: Ebay
-    url: https://ebay
+    url: https://ebay.com
   -
     title: Hodinkee
     url: https://hodinkee.com
