--- a/utils/bookmarks.yaml
+++ b/utils/bookmarks.yaml
@@ -4,7 +4,7 @@ bookmarks:
     url: https://theverge.com
   - 
     title: Hacker News
-    url: https://news.ycobinator.com
+    url: https://news.ycombinator.com
   -
     title: Youtube
     url: https://youtube.com
